# redlang

./: CMakeLists.txt  LICENSE  README.md  main.cpp  syntax.md  test.rl
lang/compiler/: semantic.cpp  semantic.hpp
lang/parser/: parser.cpp  parser.hpp  types.cpp  types.hpp
